# gtk-gist-manager

./: .buildconfig  .gitignore  .gitmodules  README.md  com.github.rickybas.gtk-gist-manager.json  com.github.rickybas.gtk-gist-manager.json~  com.github.rickybassom.gtk-gist-manager.json  gtk-gist-manager.doap  meson.build  vala.conf
data/: Application.css  com.github.rickybas.gtk-gist-manager.appdata.xml  com.github.rickybas.gtk-gist-manager.appdata.xml.in  com.github.rickybas.gtk-gist-manager.desktop.in  com.github.rickybas.gtk-gist-manager.gschema.xml  com.github.rickybassom.gtk-gist-manager.appdata.xml.in  com.github.rickybassom.gtk-gist-manager.desktop.in  com.github.rickybassom.gtk-gist-manager.gschema.xml  css.gresource.xml  meson.build
debian/: changelog  control  copyright  rules
src/: Application.vala  Constants.vala  HeaderBar.vala  LoginManager.vala  MainWindow.vala  Utils.vala  meson.build
src/Widgets/: FileTextView.vala  FileView.vala  GistView.vala  LoadingScreen.vala  LoadingView.vala  MyProfileView.vala  NewGistPopover.vala  OtherProfileView.vala  ProfileView.vala  SettingsPopover.vala  WelcomeView.vala
src/Widgets/PageSwitcher/: PageSwitcher.vala  Sidebar.vala  SidebarList.vala
subprojects/: vala-gist.wrap
vapi/: gtksourceview-3.0.vapi
